# IP_Gate

AUV-Tasks-Unclean/: CMakeLists.txt
AUV-Tasks-Unclean/src/: test.cpp
gate/: CMakeLists.txt  package.xml
gate/src/: test.cpp
